@@ -7,6 +7,7 @@ REDHAT_BUGZILLA=1002279
   + ManageFile: New function: MANAGE_CMAKE_FEDORA_CONF
   + ManageFile: New function: MANAGE_FILE_CACHE
   + ManageFile: New function: MANAGE_FILE_EXPIRY
+  + ManageMessage: New function: M_OUT
 - Removed:
   + cmake-fedora.conf.in is no longer need.
 
